fix(arc-162): fix styles for zendesk widget on mobile

--- a/src/modules/navigation/components/Footer/Footer.module.scss
+++ b/src/modules/navigation/components/Footer/Footer.module.scss
@@ -12,6 +12,7 @@
 	padding: $spacer-md $spacer-sm $spacer-sm $spacer-sm;
 	color: $neutral;
 	background-color: $white;
+	margin-top: 6rem;
 
 	@include respond-at(xl) {
 		padding-left: $spacer-lg;
@@ -106,4 +107,3 @@
 		}
 	}
 }
-
